[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assests/Sprite/info.png" type="Texture" id=1]
[ext_resource path="res://Assests/Sprite/start.png" type="Texture" id=2]
[ext_resource path="res://GameSences/Select.gd" type="Script" id=3]
[ext_resource path="res://Assests/Fonts/NotoSansSC-Regular.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Assests/Fonts/noto.tres" type="DynamicFont" id=5]
[ext_resource path="res://Assests/Sprite/volume_back.png" type="Texture" id=6]
[ext_resource path="res://Assests/Sprite/mode_pressed.png" type="Texture" id=7]
[ext_resource path="res://Assests/Sprite/mode.png" type="Texture" id=8]
[ext_resource path="res://Assests/Sprite/mode_hover.png" type="Texture" id=9]
[ext_resource path="res://Assests/Sprite/mode_select.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Start:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 684, 519 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "StartButtonHover"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Start:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.170755, 4 ),
"update": 0,
"values": [ Vector2( 684, 519 ), Vector2( 678, 513 ) ]
}

[node name="SelectBase" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ -328.0, 601.0, -136.0, 604.0 ]
}

[node name="BG" type="Sprite" parent="."]
centered = false
region_rect = Rect2( 0, 0, 1024, 600 )

[node name="InfoPanel" type="TextureRect" parent="."]
margin_left = 541.0
margin_right = 1024.0
margin_bottom = 331.0
texture = ExtResource( 1 )

[node name="EP" type="Sprite" parent="InfoPanel"]
position = Vector2( 370, 215 )
scale = Vector2( 0.384, 0.386 )

[node name="Start" type="TextureButton" parent="."]
margin_left = 684.0
margin_top = 519.0
margin_right = 1032.0
margin_bottom = 611.0
texture_normal = ExtResource( 2 )

[node name="Start" type="Label" parent="Start"]
margin_left = 112.0
margin_top = 3.0
margin_right = 232.0
margin_bottom = 91.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Play"

[node name="BPM" type="Label" parent="."]
margin_left = 624.0
margin_top = 56.0
margin_right = 693.0
margin_bottom = 80.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "BPM: 148"

[node name="TitleUnicode" type="Label" parent="."]
margin_left = 592.0
margin_top = 16.0
margin_right = 994.0
margin_bottom = 51.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 5 )
text = "十五少女 - ノンブレス・オブリージュ"

[node name="Title" type="Label" parent="."]
margin_left = 728.0
margin_top = 56.0
margin_right = 950.0
margin_bottom = 91.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "15 Voices - Non-breath oblige"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/StartButtonHover = SubResource( 5 )

[node name="VolumeBack" type="Sprite" parent="."]
position = Vector2( 84, 599 )
texture = ExtResource( 6 )

[node name="TotalSongsNum" type="Label" parent="VolumeBack"]
margin_left = -71.0
margin_top = -44.0
margin_right = 62.0
margin_bottom = -9.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="ModeSelect" type="Sprite" parent="."]
position = Vector2( 895, 430 )
texture = ExtResource( 10 )

[node name="Tween" type="Tween" parent="."]

[node name="Normal" type="TextureButton" parent="."]
margin_left = 776.0
margin_top = 423.0
margin_right = 846.0
margin_bottom = 469.0
rect_pivot_offset = Vector2( 35, 23 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 9 )

[node name="Label" type="Label" parent="Normal"]
margin_left = 12.0
margin_top = 16.0
margin_right = 59.0
margin_bottom = 30.0
text = "Nromal"

[node name="Relax" type="TextureButton" parent="."]
margin_left = 858.0
margin_top = 423.0
margin_right = 928.0
margin_bottom = 469.0
rect_pivot_offset = Vector2( 35, 23 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 9 )

[node name="Label" type="Label" parent="Relax"]
margin_left = 16.0
margin_top = 16.0
margin_right = 56.0
margin_bottom = 30.0
text = "Relax"

[node name="Auto" type="TextureButton" parent="."]
margin_left = 941.0
margin_top = 423.0
margin_right = 1011.0
margin_bottom = 469.0
rect_pivot_offset = Vector2( 35, 23 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 9 )

[node name="Label" type="Label" parent="Auto"]
margin_left = 20.0
margin_top = 16.0
margin_right = 60.0
margin_bottom = 30.0
text = "Auto"

[node name="Label" type="Label" parent="."]
margin_left = 779.0
margin_top = 385.0
margin_right = 914.0
margin_bottom = 420.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Mode Select"

[connection signal="ready" from="." to="." method="_on_SelectBase_ready"]
[connection signal="mouse_entered" from="Start" to="." method="_on_Start_mouse_entered"]
[connection signal="mouse_exited" from="Start" to="." method="_on_Start_mouse_exited"]
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Normal" to="." method="_on_Normal_pressed"]
[connection signal="pressed" from="Relax" to="." method="_on_Relax_pressed"]
[connection signal="pressed" from="Auto" to="." method="_on_Auto_pressed"]
